--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,6 +10,10 @@ h1, strong, label {
   color: #D9D9D9;
 }
 
+strong {
+  word-spacing: 999999999px;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -100,10 +104,10 @@ body {
 .play-tempo {
   margin-left: 100px;
 }
-.inst-wrapper-kick {
+.inst-wrapper {
   padding: 0;
 }
-.pad-wrapper-kick {
+.pad-wrapper {
   // background-color: #2B2B2B;
   // top: 20px;
   padding: 0;
@@ -154,7 +158,9 @@ body {
     margin: -2px -4px -2px 0;
     display: inline-block;
   }
-
+  strong {
+    word-spacing: 0px;
+  }
   .instrument-label {
     font-size: 23px;
     writing-mode: vertical-lr;
