--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,6 +4,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 html {
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
 h1, strong, label {
@@ -18,6 +19,12 @@ body {
   width: 100%;
   height: 100%;
   background-color: #000000;
+  overflow: auto;
+}
+
+header {
+  position: fixed;
+  z-index: 2;
 }
 
 .sequencer {
@@ -29,6 +36,10 @@ body {
 .row {
   margin: 0;
   vertical-align: middle;
+}
+
+.title {
+ margin: 20px 0;
 }
 
 .pad {
@@ -103,9 +114,13 @@ body {
 
 .play-tempo {
   margin-left: 100px;
+
 }
+
 .inst-wrapper {
   padding: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .pad-wrapper {
   // background-color: #2B2B2B;
@@ -171,8 +186,20 @@ body {
   }
   .play-tempo {
     margin-left: 0;
+    margin-top: 150px;
+    position: fixed;
+    z-index: 2;
   }
   .tempo-btn {
     margin: 0;
+  }
+  .sequencer {
+    margin-top: 220px;
+    margin-bottom: 220px;
+    z-index: 1;
+  }
+  .anchor {
+    position: absolute;
+    top: -240px;
   }
 }
