--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,7 +4,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 html {
   width: 100%;
   height: 100%;
-  overflow: auto;
+  // overflow: hidden;
 }
 
 h1, strong, label {
@@ -19,18 +19,28 @@ body {
   width: 100%;
   height: 100%;
   background-color: #000000;
-  overflow: auto;
+  // overflow: hidden;
 }
 
 header {
   position: fixed;
+  width: 100%;
   z-index: 2;
+  background-color: #000000;
+}
+
+.nav-menu {
+  display: none;
 }
 
 .sequencer {
+  display: block;
+  overflow: hidden;
   background-color: #161715;
-  height: 100%;
-  padding-top: 15px;
+  // height: 100%;
+  margin-top: 160px;
+  padding-right: 8px;
+  bottom: 0;
 }
 
 .row {
@@ -39,7 +49,13 @@ header {
 }
 
 .title {
- margin: 20px 0;
+ margin: 0;
+}
+
+.tempo-container {
+  height: 100%;
+  margin-top: 1px;
+  padding-left: 5px;
 }
 
 .pad {
@@ -108,17 +124,19 @@ header {
 // // }
 //
 #play-pause {
-  margin: 10px 10px 0;
+  margin: 5px 0px 0 11px;
   height: 100%;
 }
 
 .play-tempo {
   margin-left: 100px;
+  // background-color: #000000;
 
 }
 
 .inst-wrapper {
   padding: 0;
+  // height: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -160,16 +178,35 @@ header {
 // }
 //
 .tempo-btn {
-  margin: 0 5px;
+  margin: 0 3px;
   height: 100%;
+}
+
+#tempo-input {
+  margin-right: 5px;
 }
 //
 @media (max-width: 768px) {
+  html, body {
+    overflow: hidden;
+  }
+  .nav-menu {
+    display: block;
+  }
+  h1 {
+    margin-top: 5px;
+  }
+  header {
+    height: 190px;
+  }
+  .pad-wrapper {
+    margin-bottom: 115px;
+  }
 
   .pad {
     width: 25%;
     padding: 0;
-    padding-top: 25%;
+    padding-top: 23%;
     margin: -2px -4px -2px 0;
     display: inline-block;
   }
@@ -177,7 +214,8 @@ header {
     word-spacing: 0px;
   }
   .instrument-label {
-    font-size: 23px;
+    // display: inline-block;
+    font-size: 26px;
     writing-mode: vertical-lr;
     padding-top: 35%;
     padding-bottom: 0;
@@ -185,21 +223,49 @@ header {
     padding-right: 0;
   }
   .play-tempo {
+    clear: both;
     margin-left: 0;
-    margin-top: 150px;
-    position: fixed;
-    z-index: 2;
+    padding-right: 20px;
+    // margin-top: 150px;
+    // position: fixed;
+    // z-index: 2;
   }
+  // #play-pause {
+  //   height: px;
+  // }
   .tempo-btn {
-    margin: 0;
+    float: right;
+    margin-top: -9px;
+  }
+  #tempo-input {
+    float: left;
+    clear: left;
+    width: 50px;
+  }
+
+  .tempo-container {
+    float: right;
+    // padding-right: 0;
+  }
+  #decrease-tempo {
+    margin-right: 0;
+  }
+
+  label {
+    float: left;
   }
   .sequencer {
-    margin-top: 220px;
+    margin-top: 190px;
     margin-bottom: 220px;
+    height: 100%;
     z-index: 1;
+    // overflow: auto;
+  }
+  .inst-wrapper {
+    margin-bottom: 70px;
   }
   .anchor {
     position: absolute;
-    top: -240px;
+    top: -200px;
   }
 }
