--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -58,6 +58,10 @@ header {
   padding-left: 5px;
 }
 
+.tempo-btn-wrapper {
+  display: inline-block;
+}
+
 .pad {
   width: 5.71%;
   padding-top: 5.71%;
@@ -233,8 +237,13 @@ header {
   // #play-pause {
   //   height: px;
   // }
-  .tempo-btn {
+  .tempo-btn-wrapper {
     float: right;
+
+  }
+
+  .tempo-btn {
+    float: left;
     margin-top: -9px;
   }
   #tempo-input {
