--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,10 +1,9 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
-html {
+html, body {
   width: 100%;
   height: 100%;
-  // overflow: hidden;
 }
 
 h1, strong, label {
@@ -16,10 +15,7 @@ strong {
 }
 
 body {
-  width: 100%;
-  height: 100%;
   background-color: #000000;
-  // overflow: hidden;
 }
 
 header {
@@ -106,7 +102,6 @@ header {
 }
 
 .selected {
-  // background: #00FF00;
   background: radial-gradient(#E0E0E0, #FFBB2F, #C76C00);
 }
 
