--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,10 +6,15 @@ html, body {
   height: 100%;
 }
 
-h1, strong, label {
+h1, strong, label, p {
   color: #D9D9D9;
 }
-
+p, .name{
+  display: inline;
+}
+p {
+  float: right;
+}
 strong {
   word-spacing: 999999999px;
 }
@@ -23,6 +28,11 @@ header {
   width: 100%;
   z-index: 2;
   background-color: #000000;
+}
+
+header p {
+  margin-top: 20px;
+  margin-right: 30px;
 }
 
 .nav-menu {
