--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,12 +9,29 @@ html, body {
 h1, strong, label, p {
   color: #D9D9D9;
 }
-p, .name{
+
+.name {
   display: inline;
+  margin-top: 0;
+  margin-bottom: 0;
+  float: left;
 }
-p {
+
+.description {
+  display: inline;
   float: right;
 }
+.foot {
+  text-align: center;
+  display: block;
+}
+
+
+.github {
+  font-size: 30px;
+  float: right;
+}
+
 strong {
   word-spacing: 999999999px;
 }
@@ -151,7 +168,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .title {
- margin: 0;
+ margin: 10px 0;
 }
 
 .tempo-container {
@@ -377,6 +394,16 @@ input[type=range]:focus::-ms-fill-upper {
   header {
     height: 190px;
   }
+  .description {
+    margin: 0;
+    clear: left;
+    float: left;
+  }
+  .title {
+    // float: left;
+    margin-top: 5px;
+    margin-bottom: 0;
+  }
   #play-pause {
     margin-top: 5px;
   }
@@ -388,7 +415,7 @@ input[type=range]:focus::-ms-fill-upper {
     width: 25%;
     padding: 0;
     padding-top: 23%;
-    margin: -2px -4px -2px 0;
+    margin: 0 -4px -5px 0;
     display: inline-block;
   }
   strong {
@@ -455,5 +482,16 @@ input[type=range]:focus::-ms-fill-upper {
   .anchor {
     position: absolute;
     top: -200px;
+  }
+  footer {
+    // display: inline-block;
+    // display: inline;
+    width: 100%;;
+    position: fixed;
+    bottom: 10px;
+  }
+  .foot-content {
+    margin-right: 35px;
+    float: right;
   }
 }
